# flask-project

./: Dockerfile  README.md  main.py  pyproject.toml
auth/: login.py
models/: user.py
repo/: user.py
router/: auth.py  user.py
templates/: 404.html  base.html  index.html
views/: auth.py  user.py
