[project]
name = "flask-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "flask>=3.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "requests>=2.32.3",
    "taskipy>=1.14.1",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
fr = "flask --app main run --port 8000 --reload --debug"
test = "pytest -s -v"